--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -2,8 +2,8 @@ on:
   pull_request: {}
   push:
     branches:
-    - main
-    - master
+    - mainxx
+    - masterxx
 name: Semgrep
 jobs:
   semgrep:
